Updated WeDAA details on server static homepage

--- a/generators/server/templates/src/main/resources/static/index_microservices.html.ejs
+++ b/generators/server/templates/src/main/resources/static/index_microservices.html.ejs
@@ -2,7 +2,7 @@
 <html lang="<% if (enableTranslation) { %><%= nativeLanguage %><% } else { %>en<% } %>">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <title>JHipster microservice homepage</title>
+  <title><%= baseName %> microservice homepage</title>
   <style>
     ::-moz-selection {
       background: #b3d4fc;
@@ -72,20 +72,20 @@
 </head>
 <body>
 <div class="container">
-  <h1>Welcome, Java Hipster!</h1>
+  <h1>Welcome to <%= baseName %> homepage!</h1>
 
-  <p>This application is a microservice, which has been generated using <a href="https://www.jhipster.tech/" rel="noopener noreferrer">JHipster</a>.</p>
+  <p>This application is a microservice, which has been generated using <a href="https://www.wedaa.tech/" rel="noopener noreferrer">WeDAA</a>.</p>
 
   <ul>
 <%_ if (microfrontend) { %>
     <li>JHipster's microfrontends implementation doesn't provide a stand-alone UI. Packaged microfrontends should be accessed through a JHipster gateway.</li>
     <li>Stand-alone development server can be started by `npm start`.</li>
 <%_ } else { %>
-    <li>It does not have a front-end. The front-end should be generated on a JHipster gateway.</li>
+    <li>It does not have a front-end. The front-end can be generated on WeDAA separately.</li>
 <%_ } %>
     <li>It is serving REST APIs, under the '/api' URLs.</li>
     <%_ if (serviceDiscoveryEureka) { _%>
-    <li>To manage this microservice, you will probably want to use the <a href="https://www.jhipster.tech/jhipster-registry/">JHipster Registry</a>:
+    <li>To manage this microservice, you will probably want to use the <a href="https://www.jhipster.tech/jhipster-registry/">JHipster Registry</a> (a service registry based on Eureka):
       <ul>
         <li>To run the JHipster Registry locally, you can use Docker:<br><code><small>docker compose -f src/main/docker/jhipster-registry.yml up --wait</small></code></li>
         <li>Its default URL is <a href="http://localhost:8761/">http://localhost:8761/</a> and its default login/password is <code>admin/admin</code></li>
@@ -99,23 +99,23 @@
       </ul>
     </li>
     <%_ } _%>
-    <li>OpenAPI documentation endpoint for those APIs is at <a href="./v3/api-docs">/v3/api-docs</a>, but if you want access to the full Swagger UI, you should use a JHipster gateway or a JHipster Registry, which will serve as API developer portals.</li>
+    <li>OpenAPI documentation endpoint for those APIs is at <a href="./v3/api-docs">/v3/api-docs</a>, but if you want access to the full Swagger UI, you should use a Gateway or a JHipster Registry, which will serve as API developer portals.</li>
   </ul>
 
   <h2>
-    If you have any question on JHipster:
+    If you have any question on WeDAA:
   </h2>
 
   <ul>
-    <li><a href="https://www.jhipster.tech/" target="_blank" rel="noopener noreferrer">JHipster homepage</a></li>
-    <li><a href="https://stackoverflow.com/tags/jhipster/info" target="_blank" rel="noopener noreferrer">JHipster on Stack Overflow</a></li>
-    <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank" rel="noopener noreferrer">JHipster bug tracker</a></li>
-    <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">JHipster public chat room</a></li>
-    <li><a href="https://twitter.com/jhipster" target="_blank" rel="noopener noreferrer">follow @jhipster on Twitter</a></li>
+    <li><a href="https://www.wedaa.tech" target="_blank" rel="noopener noreferrer">WeDAA Homepage</a></li>
+    <li><a href="https://www.wedaa.tech/docs/introduction/what-is-wedaa" target="_blank" rel="noopener noreferrer">WeDAA Documentation</a></li>
+    <li><a href="https://github.com/orgs/wedaa-tech/discussions" target="_blank" rel="noopener noreferrer">WeDAA Discussions</a></li>
+    <li><a href="https://discord.gg/T33GX5HkjV" target="_blank" rel="noopener noreferrer">WeDAA Discord</a></li>
+    <li><a href="https://www.linkedin.com/company/wedaa" target="_blank" rel="noopener noreferrer">follow WeDAA on LinkedIn</a></li>
   </ul>
 
   <p>
-    <span>If you like JHipster, don't forget to give us a star on</span> <a href="https://github.com/jhipster/generator-jhipster" target="_blank" rel="noopener noreferrer">GitHub</a>!
+    <span>If you like WeDAA, don't forget to give us a star on</span> <a href="https://github.com/wedaa-tech" target="_blank" rel="noopener noreferrer">GitHub</a>!
   </p>
 
 </div>
