--- a/generators/server/templates/src/main/java/package/Application.java.ejs
+++ b/generators/server/templates/src/main/java/package/Application.java.ejs
@@ -16,7 +16,7 @@
  See the License for the specific language governing permissions and
  limitations under the License.
 
- in this file 'withExample' is performed only when withExample is true @cmi-tic-harika
+ in this file 'withExample' is performed only when withExample is true
 
 -%>
 package <%= packageName %>;
