--- a/generators/docker/templates/src/main/docker/app.yml.ejs
+++ b/generators/docker/templates/src/main/docker/app.yml.ejs
@@ -37,14 +37,14 @@ services:
 const databaseName = prodDatabaseTypeMysql || prodDatabaseTypeMariadb ? baseName.toLowerCase() : baseName;
 _%>
   <%_ if (reactive) { _%>
-      - SPRING_R2DBC_URL=<%- this.getR2DBCUrl(prodDatabaseType, { hostname: `${baseName.toLowerCase()}-${prodDatabaseType}`, databaseName: databaseName }) %>
+      - SPRING_R2DBC_URL=<%- this.getR2DBCUrl(prodDatabaseType, { hostname: `${baseName.toLowerCase()}-${prodDatabaseType}`, databaseName: databaseName, databasePort: databasePort }) %>
   <%_ } else { _%>
-      - SPRING_DATASOURCE_URL=<%- this.getJDBCUrl(prodDatabaseType, { hostname: `${baseName.toLowerCase()}-${prodDatabaseType}`, databaseName: databaseName }) %>
+      - SPRING_DATASOURCE_URL=<%- this.getJDBCUrl(prodDatabaseType, { hostname: `${baseName.toLowerCase()}-${prodDatabaseType}`, databaseName: databaseName, databasePort: databasePort }) %>
   <%_ } _%>
-      - SPRING_LIQUIBASE_URL=<%- this.getJDBCUrl(prodDatabaseType, { hostname: `${baseName.toLowerCase()}-${prodDatabaseType}`, databaseName: databaseName }) %>
+      - SPRING_LIQUIBASE_URL=<%- this.getJDBCUrl(prodDatabaseType, { hostname: `${baseName.toLowerCase()}-${prodDatabaseType}`, databaseName: databaseName , databasePort: databasePort }) %>
 <%_ } _%>
 <%_ if (databaseTypeMongodb) { _%>
-      - SPRING_DATA_MONGODB_URI=mongodb://<%= baseName.toLowerCase() %>-mongodb:27017<% if (reactive) { %>/?waitQueueMultiple=1000<% } %>
+      - SPRING_DATA_MONGODB_URI=mongodb://<%= baseName.toLowerCase() %>-mongodb:<%= databasePort != null ? databasePort : 27017 %><% if (reactive) { %>/?waitQueueMultiple=1000<% } %>
       - SPRING_DATA_MONGODB_DATABASE=<%= baseName %>
 <%_ } _%>
 <%_ if (databaseTypeNeo4j) { _%>
