--- a/generators/docker/templates/src/main/docker/mongodb-cluster.yml.ejs
+++ b/generators/docker/templates/src/main/docker/mongodb-cluster.yml.ejs
@@ -24,7 +24,7 @@ services:
     # If you want to expose these ports outside your dev PC,
     # remove the "127.0.0.1:" prefix
     ports:
-      - 127.0.0.1:27017:27017
+      - 127.0.0.1:<%= databasePort != null ? databasePort : 27017 %>:27017
     command: mongos --configdb csvr/<%= baseName.toLowerCase() %>-mongodb-config --bind_ip 0.0.0.0
   mongodb-node:
     build:
