--- a/generators/kubernetes/templates/deployment.yml.ejs
+++ b/generators/kubernetes/templates/deployment.yml.ejs
@@ -69,10 +69,10 @@ spec:
                   rt=$(nc -z -w 1 <%= app.baseName.toLowerCase() %>-mariadb 3306)
 <%_ } _%>
 <%_ if (app.prodDatabaseTypePostgres) { _%>
-                  rt=$(nc -z -w 1 <%= app.baseName.toLowerCase() %>-postgresql 5432)
+                  rt=$(nc -z -w 1 <%= app.baseName.toLowerCase() %>-postgresql <%= app.databasePort != null ? app.databasePort : 5432 %>)
 <%_ } _%>
 <%_ if (app.databaseTypeMongodb) { _%>
-                  rt=$(nc -z -w 1 <%= app.baseName.toLowerCase() %>-mongodb 27017)
+                  rt=$(nc -z -w 1 <%= app.baseName.toLowerCase() %>-mongodb <%= app.databasePort != null ? app.databasePort : 27017 %>)
 <%_ } _%>
 <%_ if (app.databaseTypeCouchbase) { _%>
                   rt=$(nc -z -w 1 <%= app.baseName.toLowerCase() %>-couchbase-cluster-srv 8091)
@@ -182,12 +182,12 @@ spec:
 <%_ } _%>
 <%_ if (app.prodDatabaseTypeMysql || app.prodDatabaseTypeMariadb) { _%>
         - name: SPRING_DATASOURCE_URL
-          value: <%- this.getJDBCUrl(app.prodDatabaseType, { hostname: `${app.baseName.toLowerCase()}-${app.prodDatabaseType}.${kubernetesNamespace}.svc.cluster.local`, databaseName: app.baseName.toLowerCase() }) %>
+          value: <%- this.getJDBCUrl(app.prodDatabaseType, { hostname: `${app.baseName.toLowerCase()}-${app.prodDatabaseType}.${kubernetesNamespace}.svc.cluster.local`, databaseName: app.baseName.toLowerCase(), databasePort: app.databasePort }) %>
         - name: SPRING_LIQUIBASE_URL
-          value: <%- this.getJDBCUrl(app.prodDatabaseType, { hostname: `${app.baseName.toLowerCase()}-${app.prodDatabaseType}.${kubernetesNamespace}.svc.cluster.local`, databaseName: app.baseName.toLowerCase() }) %>
+          value: <%- this.getJDBCUrl(app.prodDatabaseType, { hostname: `${app.baseName.toLowerCase()}-${app.prodDatabaseType}.${kubernetesNamespace}.svc.cluster.local`, databaseName: app.baseName.toLowerCase(), databasePort: app.databasePort }) %>
   <%_ if (app.reactive) { _%>
         - name: SPRING_R2DBC_URL
-          value: <%- this.getR2DBCUrl(app.prodDatabaseType, { hostname: `${app.baseName.toLowerCase()}-${app.prodDatabaseType}.${kubernetesNamespace}.svc.cluster.local`, databaseName: app.baseName.toLowerCase() }) %>
+          value: <%- this.getR2DBCUrl(app.prodDatabaseType, { hostname: `${app.baseName.toLowerCase()}-${app.prodDatabaseType}.${kubernetesNamespace}.svc.cluster.local`, databaseName: app.baseName.toLowerCase(), databasePort: app.databasePort }) %>
   <%_ } _%>
 <%_ } _%>
 <%_ if (app.prodDatabaseTypeMariadb) { _%>
@@ -203,7 +203,7 @@ spec:
 <%_ } _%>
 <%_ if (app.prodDatabaseTypePostgres) { _%>
         - name: SPRING_DATASOURCE_URL
-          value: <%- this.getJDBCUrl(app.prodDatabaseType, { hostname: `${app.baseName.toLowerCase()}-${app.prodDatabaseType}.${kubernetesNamespace}.svc.cluster.local`, databaseName: app.baseName }) %>
+          value: <%- this.getJDBCUrl(app.prodDatabaseType, { hostname: `${app.baseName.toLowerCase()}-${app.prodDatabaseType}.${kubernetesNamespace}.svc.cluster.local`, databaseName: app.baseName, databasePort: app.databasePort }) %>
         - name: SPRING_DATASOURCE_USERNAME
           value: <%= app.baseName %>
   <%_ if (app.reactive) { _%>
@@ -216,17 +216,17 @@ spec:
               name: <%= app.baseName.toLowerCase() %>-postgresql
               key: postgresql-password
         - name: SPRING_LIQUIBASE_URL
-          value: <%- this.getJDBCUrl(app.prodDatabaseType, { hostname: `${app.baseName.toLowerCase()}-${app.prodDatabaseType}.${kubernetesNamespace}.svc.cluster.local`, databaseName: app.baseName.toLowerCase() }) %>
+          value: <%- this.getJDBCUrl(app.prodDatabaseType, { hostname: `${app.baseName.toLowerCase()}-${app.prodDatabaseType}.${kubernetesNamespace}.svc.cluster.local`, databaseName: app.baseName.toLowerCase(), databasePort: app.databasePort }) %>
   <%_ if (app.reactive) { _%>
         - name: SPRING_R2DBC_URL
-          value: <%- this.getR2DBCUrl(app.prodDatabaseType, { hostname: `${app.baseName.toLowerCase()}-${app.prodDatabaseType}.${kubernetesNamespace}.svc.cluster.local`, databaseName: app.baseName.toLowerCase() }) %>
+          value: <%- this.getR2DBCUrl(app.prodDatabaseType, { hostname: `${app.baseName.toLowerCase()}-${app.prodDatabaseType}.${kubernetesNamespace}.svc.cluster.local`, databaseName: app.baseName.toLowerCase(), databasePort: app.databasePort }) %>
   <%_ } _%>
 <%_ } _%>
 <%_ if (app.databaseTypeMongodb) { _%>
         - name: SPRING_DATA_MONGODB_DATABASE
           value: <%= app.baseName %>
         - name: SPRING_DATA_MONGODB_URI
-          value: "mongodb://<% for (let i = 0; i < app.dbPeerCount; i++) { %><%= app.baseName.toLowerCase() %>-mongodb-<%= i %>.<%= app.baseName.toLowerCase() %>-mongodb.<%= kubernetesNamespace %>:27017<% if (app.reactive) { %>/?waitQueueMultiple=1000<% } %><% if (i < (app.dbPeerCount-1)) { %>,<% }} %>"
+          value: "mongodb://<% for (let i = 0; i < app.dbPeerCount; i++) { %><%= app.baseName.toLowerCase() %>-mongodb-<%= i %>.<%= app.baseName.toLowerCase() %>-mongodb.<%= kubernetesNamespace %>:<%= app.databasePort != null ? app.databasePort : 27017 %><% if (app.reactive) { %>/?waitQueueMultiple=1000<% } %><% if (i < (app.dbPeerCount-1)) { %>,<% }} %>"
 <%_ } _%>
 <%_ if (app.databaseTypeNeo4j) { _%>
         - name: SPRING_NEO4J_URI
@@ -343,7 +343,7 @@ spec:
               name: <%= app.baseName.toLowerCase() %>-postgresql
               key: postgresql-password
         - name: DB_URL
-          value: postgresql://<%= app.baseName.toLowerCase() %>:$(DB_PASSWORD)@<%= app.baseName.toLowerCase() %>-postgresql.<%= kubernetesNamespace %>.svc.cluster.local:5432/<%= app.baseName.toLowerCase() %>
+          value: postgresql://<%= app.baseName.toLowerCase() %>:$(DB_PASSWORD)@<%= app.baseName.toLowerCase() %>-postgresql.<%= kubernetesNamespace %>.svc.cluster.local:<%= app.databasePort != null ? app.databasePort : 5432 %>/<%= app.baseName.toLowerCase() %>
           <%_ } _%>
         - name: KEYCLOAK_URL
         <%_ if (!minikube) { _%>
@@ -364,11 +364,11 @@ spec:
               name: <%= app.baseName.toLowerCase() %>-postgresql
               key: postgresql-password
         - name: GO_MICRO_DB_URL
-          value: postgresql://<%= app.baseName.toLowerCase() %>:$(GO_MICRO_DB_PASSWORD)@<%= app.baseName.toLowerCase() %>-postgresql.<%= kubernetesNamespace %>.svc.cluster.local:5432/<%= app.baseName.toLowerCase() %>
+          value: postgresql://<%= app.baseName.toLowerCase() %>:$(GO_MICRO_DB_PASSWORD)@<%= app.baseName.toLowerCase() %>-postgresql.<%= kubernetesNamespace %>.svc.cluster.local:<%= app.databasePort != null ? app.databasePort : 5432 %>/<%= app.baseName.toLowerCase() %>
         <%_ } _%>
         <%_ if (app.databaseTypeMongodb) { _%>
         - name: GO_MICRO_MONGODB_URL
-          value: "mongodb://<% for (let i = 0; i < app.dbPeerCount; i++) { %><%= app.baseName.toLowerCase() %>-mongodb-<%= i %>.<%= app.baseName.toLowerCase() %>-mongodb.<%= kubernetesNamespace %>:27017<% if (app.reactive) { %>/?waitQueueMultiple=1000<% } %><% if (i < (app.dbPeerCount-1)) { %>,<% }} %>"
+          value: "mongodb://<% for (let i = 0; i < app.dbPeerCount; i++) { %><%= app.baseName.toLowerCase() %>-mongodb-<%= i %>.<%= app.baseName.toLowerCase() %>-mongodb.<%= kubernetesNamespace %>:<%= app.databasePort != null ? app.databasePort : 27017 %><% if (app.reactive) { %>/?waitQueueMultiple=1000<% } %><% if (i < (app.dbPeerCount-1)) { %>,<% }} %>"
         <%_ } _%>
         <%_ if (app.messageBrokerRabbitMQ || app.communicationsFrameworkRabbitMQ) { _%>
         - name: RABBITMQ_GUEST_PASSWORD
