--- a/generators/server/templates/src/main/resources/config/application-dev.yml.ejs
+++ b/generators/server/templates/src/main/resources/config/application-dev.yml.ejs
@@ -154,7 +154,7 @@ spring:
 <%_ if (databaseTypeMongodb) { _%>
   data:
     mongodb:
-      uri: mongodb://localhost:27017<% if (reactive) { %>/?waitQueueMultiple=1000<% } %>
+      uri: mongodb://localhost:<%= databasePort != null ? databasePort : 27017 %><% if (reactive) { %>/?waitQueueMultiple=1000<% } %>
       database: <%= baseName %>
 <%_ } _%>
 <%_ if (databaseTypeCassandra) { _%>
@@ -290,7 +290,7 @@ jhipster:
   <%_ if (microfrontend) { _%>
     # Ports <%= devServerPort + 1 %>-<%= devServerPort + 9 %> are allowed for microfrontend development
   <%_ } _%>
-    allowed-origins: "http://localhost:3000,http://localhost:4200,http://localhost:8100,https://localhost:8100,http://localhost:9000,https://localhost:9000<%_ if (!skipClient) { _%>,http://localhost:<%= devServerPort %>,https://localhost:<%= devServerPort %><%_ if (microfrontend) { for (let port = 1; port < 10; port++) { _%>,http://localhost:<%= devServerPort + port %>,https://localhost:<%= devServerPort + port %><%_ } _%><%_ } } _%><%_ appConfigs.forEach(appConfig => { %><%= appConfig.clientFramework !== 'no' ? `,http://localhost:${appConfig.serverPort}` : '' %><%_ }); %>"
+    allowed-origins: "http://localhost:3000,http://localhost:4200,http://localhost:8100,https://localhost:8100,http://localhost:9000,https://localhost:9000<%_ if (!skipClient) { _%>,http://localhost:<%= devServerPort %>,https://localhost:<%= devServerPort %><%_ if (microfrontend) { for (let port = 1; port < 10; port++) { _%>,http://localhost:<%= devServerPort + port %>,https://localhost:<%= devServerPort + port %><%_ } _%><%_ } } _%><%_ appConfigs.forEach(appConfig => { %><%= appConfig.hasOwnProperty('clientFramework') && appConfig.clientFramework !== 'no' ? `,http://localhost:${appConfig.serverPort}` : '' %><%_ }); %>"
     # Enable CORS when running in GitHub Codespaces
     allowed-origin-patterns: 'https://*.githubpreview.dev'
     allowed-methods: "*"
@@ -306,7 +306,7 @@ jhipster:
   # CORS is disabled by default on microservices, as you should access them through a gateway.
   # If you want to enable it, please uncomment the configuration below.
   cors:
-    allowed-origins: "http://localhost:3000,http://localhost:4200<%_ appConfigs.forEach(appConfig => { %><%= appConfig.clientFramework !== 'no' ? `,http://localhost:${appConfig.serverPort}` : '' %><%_ }); %>"
+    allowed-origins: "http://localhost:3000,http://localhost:4200<%_ appConfigs.forEach(appConfig => { %><%= appConfig.hasOwnProperty('clientFramework') && appConfig.clientFramework !== 'no'  ? `,http://localhost:${appConfig.serverPort}` : '' %><%_ }); %>"
     allowed-methods: "*"
     allowed-headers: "*"
     exposed-headers: "Authorization,Link,X-Total-Count"
