--- a/generators/communications/templates/rabbitmq/src/main/java/package/producer/RabbitMQProducer.java.ejs
+++ b/generators/communications/templates/rabbitmq/src/main/java/package/producer/RabbitMQProducer.java.ejs
@@ -26,6 +26,6 @@ public class RabbitMQProducer<%= uniqueName %> {
         message.setMessage("Publishing this message from <%= baseName %> with key: " + RabbitMQConfig<%= uniqueName %>.QUEUE);
         message.setDateTime(new Date());
         template.convertAndSend(RabbitMQConfig<%= uniqueName %>.EXCHANGE, RabbitMQConfig<%= uniqueName %>.ROUTING_KEY, message);
-        logger.info("Message Published Successfully");
+        logger.info("Publishing to the Queue: <%= uniqueName %>");
     }
 }
