--- a/generators/communications/templates/rabbitmq/src/main/java/package/consumer/RabbitMQConsumer.java.ejs
+++ b/generators/communications/templates/rabbitmq/src/main/java/package/consumer/RabbitMQConsumer.java.ejs
@@ -14,6 +14,6 @@ public class RabbitMQConsumer<%= uniqueName %> {
 
     @RabbitListener(queues = RabbitMQConfig<%= uniqueName %>.QUEUE)
     public void listener(RabbitMessageModel message) {
-        logger.info("Received message: {}", message);
+        logger.info("Consuming from Queue: <%= uniqueName %>");
     }
 }
