--- a/generators/communications/templates/rabbitmq/src/main/java/package/consumer/RabbitMQConsumer.java.ejs
+++ b/generators/communications/templates/rabbitmq/src/main/java/package/consumer/RabbitMQConsumer.java.ejs
@@ -14,6 +14,6 @@ public class RabbitMQConsumer<%= uniqueName %> {
 
     @RabbitListener(queues = RabbitMQConfig<%= uniqueName %>.QUEUE)
     public void listener(RabbitMessageModel message) {
-        logger.info("Consuming from Queue: <%= uniqueName %>");
+        logger.info("Consumed from Queue: {}, Routing Key: {}, Message: {}", RabbitMQConfig<%= uniqueName %>.QUEUE, RabbitMQConfig<%= uniqueName %>.ROUTING_KEY, message);
     }
 }
