--- a/generators/communications/templates/rest-api/src/main/java/package/config/AccessToken.java.ejs
+++ b/generators/communications/templates/rest-api/src/main/java/package/config/AccessToken.java.ejs
@@ -1,4 +1,4 @@
-package <%= packageName %>.config.webClient;
+package <%= packageName %>.config;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
