--- a/generators/communications/templates/rest-api/src/main/java/package/config/WebClientConfig.java.ejs
+++ b/generators/communications/templates/rest-api/src/main/java/package/config/WebClientConfig.java.ejs
@@ -1,7 +1,9 @@
-package <%= packageName %>.config.webClient;
+package <%= packageName %>.config;
 
+<%_ if(serviceDiscoveryEureka) { _%>
 import org.springframework.cloud.client.loadbalancer.LoadBalanced;
 import org.springframework.context.annotation.Bean;
+<%_ } _%>
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
