--- a/generators/communications/templates/rest-api/src/main/java/package/web/rest/ClientResource_eureka.java.ejs
+++ b/generators/communications/templates/rest-api/src/main/java/package/web/rest/ClientResource_eureka.java.ejs
@@ -1,8 +1,8 @@
 package <%= packageName %>.web.rest.comm;
 <%_ if(authenticationTypeOauth2) { _%>
-import <%= packageName %>.config.webClient.AccessToken;
+import <%= packageName %>.config.AccessToken;
 <%_ } _%>
-import <%= packageName %>.config.webClient.WebClientConfig;
+import <%= packageName %>.config.WebClientConfig;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
