--- a/generators/communications/templates/rest-api/src/test/java/package/web/rest/ClientResourceUT_eureka.java.ejs
+++ b/generators/communications/templates/rest-api/src/test/java/package/web/rest/ClientResourceUT_eureka.java.ejs
@@ -1,9 +1,9 @@
 package <%= packageName %>.web.rest.comm;
 
 <%_ if(authenticationTypeOauth2) { _%>
-import <%= packageName %>.config.webClient.AccessToken;
+import <%= packageName %>.config.AccessToken;
 <%_ } _%>
-import <%= packageName %>.config.webClient.WebClientConfig;
+import <%= packageName %>.config.WebClientConfig;
 
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
