--- a/generators/server/templates/wedaa/src/main/java/package/domain/Note.java.ejs
+++ b/generators/server/templates/wedaa/src/main/java/package/domain/Note.java.ejs
@@ -1,8 +1,12 @@
 package <%= packageName %>.domain;
 
 <%_ if (prodDatabaseTypePostgres) { _%>
-import jakarta.persistence.*;
-import org.hibernate.annotations.GenericGenerator;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.Table;
 <%_ } _%>
 <%_ if (databaseTypeMongodb) { _%>
 import org.springframework.data.annotation.Id;
@@ -11,12 +15,12 @@ import org.springframework.data.mongodb.core.mapping.Document;
 
 <%_ if (prodDatabaseTypePostgres) { _%>
 @Entity
-@Table(name = "note")
+@Table(name = "notes")
 <%_ } _%> 
 <%_ if (databaseTypeMongodb) { _%>
-@Document
+@Document("notes")
 <%_ } _%> 
-public class Note {
+public class Note <% if (prodDatabaseTypePostgres) { %> extends AbstractAuditingEntity<Long> <% } %> {
     @Id
     <%_ if (prodDatabaseTypePostgres) { _%>
     @GeneratedValue(strategy = GenerationType.IDENTITY)
