--- a/generators/common/templates/README.md.jhi.ejs
+++ b/generators/common/templates/README.md.jhi.ejs
@@ -49,7 +49,7 @@ Component details:
 - Keycloak as Identity Management: `npm run docker:keycloak:up`
 <%_ } _%>
 <%_ if (serviceDiscoveryEureka) { _%>
-- Eureka Service Discovery: `npm run docker:jhispter-registry:up`
+- Eureka Service Discovery: `npm run docker:jhipster-registry:up`
 <%_ } _%>
 <%_ if (prodDatabaseType !== "no") { _%>
 - Database: `npm run docker:db:up`
